reformating because why not

--- a/00-app-presentation.Rmd
+++ b/00-app-presentation.Rmd
@@ -48,7 +48,7 @@ The code is available at [github.com/ColinFay/tidytuesday201942](https://github.
 
 `{minifying}` is an application to minify CSS, JavaScript, HTML and JSON files. 
 It's been built by Colin as a use case for the workflow of this book.
-You will find the details of how this app was constructed at \@ref(#usecase).
+You will find the details of how this app was constructed in the Appendix, "_Use case - Building an App, from Start to Finish_".
 
 (ref:minifying) The `{minifying}` application.
 
