--- a/01-big-shiny.Rmd
+++ b/01-big-shiny.Rmd
@@ -27,7 +27,8 @@ Ready to start engineering production-grade `{shiny}` apps?
 
 ## What is a Complex `{shiny}` Application? {#complex-shiny}
 
-> One of the unfortunate things about reality is that it often poses complex problems that demand complex solutions $`r right_link("The Art of Unix Programming", "http://www.catb.org/~esr/writings/taoup/html/ch13s01.html")`$
+> One of the unfortunate things about reality is that it often poses complex problems that demand complex solutions 
+> `r right_link("The Art of Unix Programming", "http://www.catb.org/~esr/writings/taoup/html/ch13s01.html")`
 
 ### Reaching the cliff of complexity
 
@@ -257,16 +258,11 @@ cloc::cloc_pkg(
 
 
 ```{r 01-big-shiny-7-non-eval-but-shown, eval = FALSE}
-# Creating a golem in the temporary directory
-new_golem <- "~"
+# Creating a golem 
 golem::create_golem(
-  file.path(
-    new_golem, 
-    "blankgolem"
-  ), 
+  "blankgolem", 
   open = FALSE
 )
-# Counting metrics for this blank project:
 ```
 
 ```
@@ -287,11 +283,9 @@ To continue working on your app, start editing the
 ```
 
 ```{r 01-big-shiny-1-bis}
+"blankgolem"
 cloc::cloc_pkg(
-  file.path(
-    new_golem, 
-    "blankgolem"
-  )
+  "blankgolem"
 ) %>% glimpse()
 ```
 
@@ -325,7 +319,7 @@ if (
 hexmake_cloc <- cloc_git(
   "https://github.com/ColinFay/hexmake"
 )
-hexmake_cloc %>% glimpse()
+hexmake_cloc
 ```
 
 One thing that this package also allows is counting the number of lines of commented code: it's usually a good sign to see that a package has comments in its code-base, as it will allow to work more safely in the future, provided that this metric doesn't reveal that large portions of the application are "commented code" (as opposed to "code comments"). 
