--- a/04-golem.Rmd
+++ b/04-golem.Rmd
@@ -23,7 +23,7 @@ Note that the version used at the time of writing this book is `r packageVersion
 
 ## What is `{golem}`?
 
-> Note: the current version of `{golem}` used when writing this book is `r packageVersion("golem")`, and some of the features presented in this book might not be available if you are using an older version. 
+_Note: the current version of `{golem}` used when writing this book is `r packageVersion("golem")`, and some of the features presented in this book might not be available if you are using an older version, or be a little bit different if you have a newer version. Feel free to browse the package NEWS._ 
 
 `{golem}` is a toolkit for simplifying the creation, development and deployment of a `{shiny}` application. 
 It's focused on building applications that will be sent to production, but of course starting with `{golem}` from the very beginning is also possible, even recommended: it is easier to start with `{golem}` than to refactor your codebase to fit into the framework.
