--- a/05-workflow.Rmd
+++ b/05-workflow.Rmd
@@ -93,9 +93,8 @@ _Strengthening_ your app is ensuring your application is immortal, in the sense 
 In this part, we will go through unit tests, reproducible development environment, version control and continuous integration in the context of `{shiny}` applications.
 Building a solid testing suite is crucial to the success of a project, as it allows a project to be stable on the long run, be it when you will want to add new feature, or refactor existing code: 
 
-> Refactoring requires we be able to confidently ensure that behavior remains identical at every iteration. We can increase our confidence that nothing has changed by writing a suite of tests (unit, integration, end-to-end), and we should not seriously consider moving forward with any refactoring effort until we’ve established sufficient test coverage.
-
-$`r right_link("Refactoring at Scale - Maud Lemaire", "https://learning.oreilly.com/library/view/refactoring-at-scale/9781492075523/")`$
+> Refactoring requires we be able to confidently ensure that behavior remains identical at every iteration. We can increase our confidence that nothing has changed by writing a suite of tests (unit, integration, end-to-end), and we should not seriously consider moving forward with any refactoring effort until we’ve established sufficient test coverage.  
+> `r right_link("Refactoring at Scale - Maud Lemaire", "https://learning.oreilly.com/library/view/refactoring-at-scale/9781492075523/")`
 
 This step of the workflow will span over two chapters. 
 
