--- a/11-step-by-step-secure.Rmd
+++ b/11-step-by-step-secure.Rmd
@@ -26,7 +26,8 @@ right_link <- function(text, link){
 
 # Build yourself a safety net {#step-secure}
 
-> "Don't fuck over Future You" $`r right_link('JD', 'https://twitter.com/CMastication')`$
+> "Don't fuck over Future You" 
+> `r right_link('JD', 'https://twitter.com/CMastication')`
 
 Strengthening your app means two things: testing, and locking the application environment.
 
@@ -66,10 +67,10 @@ Here is an example of testing that the `meaning_of_life` will always be `42`.
 ```r
 # Creating a testing context, with one expectation
 test_that("The meaning of life is 42", {
-expect_equal(
-meaning_of_life(), 
-42
-)
+  expect_equal(
+    meaning_of_life(), 
+    42
+  )
 })
 ```
 
@@ -618,7 +619,7 @@ Sys.sleep(60) # Let the container launch
 Then, a `{crrry}` job:
 
 
-```{r 11-step-by-step-secure-35, eval = TRUE, echo = FALSE}
+```{r 11-step-by-step-secure-35, eval = FALSE, echo = TRUE}
 # See previous version of this code for a commented explanation 
 test <- crrry::CrrryOnPage$new(
   chrome_bin = pagedown::find_chrome(),
@@ -626,7 +627,6 @@ test <- crrry::CrrryOnPage$new(
   url ="http://localhost:2708",
   headless = TRUE
 )
-test$wait_for_shiny_ready()
 ```
 
 ```
@@ -638,9 +638,18 @@ Running '/Applications/Google
   '--remote-debugging-port=48938'
 ```
 
-```{r eval = FALSE, include = FALSE}
+```{r, eval = FALSE}
+test$wait_for_shiny_ready()
+```
+
+
+```
+Shiny is computing
+✓ Shiny is still running
+```
+
+```{r eval = FALSE, include = FALSE, results = 'hide'}
 # See previous version of this code for a commented explanation 
-sink()
 test <- crrry::CrrryOnPage$new(
   chrome_bin = pagedown::find_chrome(),
   chrome_port = httpuv::randomPort(),
@@ -648,7 +657,6 @@ test <- crrry::CrrryOnPage$new(
   headless = TRUE
 )
 test$wait_for_shiny_ready()
-sink()
 ```
 
 
@@ -865,7 +873,8 @@ That means that you can have `{geojsonsf}` version `1.2.1` in one of your projec
 
 ####  B. Using `{renv}` {-}
 
-> Underlying the philosophy of renv is that any of your existing workflows should just work as they did befo. $`r right_link("Introduction to renv", "https://rstudio.github.io/renv/articles/renv.html")`$
+> Underlying the philosophy of renv is that any of your existing workflows should just work as they did befo. 
+>`r right_link("Introduction to renv", "https://rstudio.github.io/renv/articles/renv.html")`
 
 The first thing to do with `{renv}` is initiating it with the `init()` function. 
 ```{r 11-step-by-step-secure-39, eval = FALSE}
