--- a/12-secure.Rmd
+++ b/12-secure.Rmd
@@ -29,7 +29,7 @@ This feature is very important: if you accidentally made changes that break your
 
 + __Several people can work on the same file__. 
 `Git` relies on a system of branches. 
-Within this branch pattern, there is one main branch, called "master", which contains the stable, main version of the code-base. 
+Within this branch pattern, there is one main branch, called "main", which contains the stable, main version of the code-base. 
 By "forking" this branch (or any other branch), developers will have a copy of the base branch, where they can safely work on changing (and breaking) things, without impacting the origin branch. 
 This allows to try things in a safe environment, without touching what works. 
 Note that simultaneously working on the same file at the same time might not be the perfect practice, it's better, if possible, to split the code into smaller files. 
@@ -89,11 +89,11 @@ Once changes have been recorded in the main server, everybody synchronized with 
 Branches are `git` way to organize work and ideas, notably when several people are collaborating on the same project (which might be the case when building large web applications with R).
 
 How does it work? 
-When your start a project, you are in the main branch, which is called the "master".
+When your start a project, you are in the main branch, which is called the "main".
 In a perfect world, you never work directly on this branch: it should always contain a working, deployable version of the application. 
 
 Other branches are to be thought as work areas, where developers fix bugs or add features. 
-The modifications made in these development branches will then be transferred (directly or indirectly) to the master branch.
+The modifications made in these development branches will then be transferred (directly or indirectly) to the main branch.
 
 (ref:gitbranchcap) Branches in git.
 
@@ -139,19 +139,19 @@ Please note that this is a quick introduction, not a complete guide: we will lin
 
 So, here are the key concept of `git flow`: 
 
-+ The `master` branch only contains stable code: most of the time is matches a tagged, fixed version (v0.0.1, 0.1.0, v1.0.0, etc). 
-A very small subset of developers involved in the project have writing access to the `master` branch, and no developer should ever push code straight to this branch: new code to `master` only comes either from the `dev` branch, or from a `hotfix` branch. 
++ The `main` branch only contains stable code: most of the time is matches a tagged, fixed version (v0.0.1, 0.1.0, v1.0.0, etc). 
+A very small subset of developers involved in the project have writing access to the `main` branch, and no developer should ever push code straight to this branch: new code to `main` only comes either from the `dev` branch, or from a `hotfix` branch. 
 For an app in production, the last commit of this branch should be the version that is currently in production. 
 
-+ The `dev` branch, on the other hand, is the "Work in progress" branch: the one that contains the latest changes before they are merged into master. 
++ The `dev` branch, on the other hand, is the "Work in progress" branch: the one that contains the latest changes before they are merged into main. 
 This is the common working branch for every developers. 
 Most of the time, developers do not push code into these branch either: they make merge/pull request (MR/PR) to `dev` from one of their `feature branch`. 
 
 + A `feature branch` is one branch, forked from `dev`, that implements one of the feature of the application. 
 To keep a clean track of what each branch is doing, a good practice is to use `issue-XXX`, where `XXX` is the corresponding issue you plan to solve in this branch. 
 
-+ A `hot fix` branch is a branch to correct a critical issue in `master`.
-If is forked from master, and is merged straight into `master` using a MR. 
++ A `hot fix` branch is a branch to correct a critical issue in `main`.
+If is forked from main, and is merged straight into `main` using a MR. 
 
 Here is a summary of this process:
 
@@ -258,7 +258,7 @@ documenting:
     allow_failure: true
     when: on_success
     only:
-        - master
+        - main
     script:
         - Rscript -e 'install.packages("DT")'
         - Rscript -e 'covr::gitlab(quiet = FALSE)'
