--- a/14-when_optimize.Rmd
+++ b/14-when_optimize.Rmd
@@ -2,7 +2,8 @@
 
 # The Need for Optimization {#when-optimize}
 
-> Only once we have a solid characterization of the surface area we want to improve can we begin to identify the best way to improve it. $`r right_link("Refactoring at Scale", "https://learning.oreilly.com/library/view/refactoring-at-scale/9781492075523/")`$
+> Only once we have a solid characterization of the surface area we want to improve can we begin to identify the best way to improve it. 
+> `r right_link("Refactoring at Scale", "https://learning.oreilly.com/library/view/refactoring-at-scale/9781492075523/")`
 
 ## Build first, then optimize
 
@@ -38,7 +39,8 @@ This is something you will discover only when the application is fully functiona
 
 Or to sum up: 
 
-> Get your design right with an un-optimized, slow, memory-intensive implementation before you try to tune. Then, tune systematically, looking for the places where you can buy big performance wins with the smallest possible increases in local complexity. $`r right_link("The Art of Unix Programming", "http://www.catb.org/~esr/writings/taoup/html/")`$
+> Get your design right with an un-optimized, slow, memory-intensive implementation before you try to tune. Then, tune systematically, looking for the places where you can buy big performance wins with the smallest possible increases in local complexity. 
+> `r right_link("The Art of Unix Programming", "http://www.catb.org/~esr/writings/taoup/html/")`
 
 ### Do you need faster functions?
 
@@ -132,7 +134,8 @@ The best way to profile R code is by using the `{profvis}` [@R-profvis] package
 With `{profvis}`, you can spot the bottleneck of your function. 
 Without an automated tool to do the profiling, the developers would have to profile by guessing, which will, most of the time, come with bad results: 
 
-> One of the lessons that the original Unix programmers learned early is that intuition is a poor guide to where the bottlenecks are, even for one who knows the code in question intimately. $`r right_link("The Art of Unix Programming", "http://www.catb.org/~esr/writings/taoup/html/ch12s02.html")`$
+> One of the lessons that the original Unix programmers learned early is that intuition is a poor guide to where the bottlenecks are, even for one who knows the code in question intimately. 
+> `r right_link("The Art of Unix Programming", "http://www.catb.org/~esr/writings/taoup/html/ch12s02.html")`
 
 Instead of guessing, it is safe bet to go for a tool like `{profvis}`, which allows to have a detailed view of what takes a long time to run in your R code. 
 
@@ -289,7 +292,7 @@ If you want a graphical analysis, `{bench}` comes with an `autoplot` method for 
 
 (ref:benchautoplot) `{bench}` autoplot 
 
-```{r 14-when-optimize-10, fig.cap="(ref:benchautoplot)", out.width="100%"}
+```{r 14-when-optimize-10, fig.cap="(ref:benchautoplot)", out.width="100%", warning = FALSE}
 ggplot2::autoplot(res)
 ```
 
@@ -529,9 +532,8 @@ Minifiction is something important as the heavier your resources, the longer you
 
 And do not forget, 
 
-> Extremely high-speed network infrastructures are becoming more and more popular in developed countries. However, we still face crowded and low-speed Wi-Fi environments on airport, cafe, international conference, etc. Especially, a network environment of mobile devices requires efficient usage of network bandwidth. 
- 
-Taken from [@Sakamoto2015]
+> Extremely high-speed network infrastructures are becoming more and more popular in developed countries. However, we still face crowded and low-speed Wi-Fi environments on airport, cafe, international conference, etc. Especially, a network environment of mobile devices requires efficient usage of network bandwidth.
+> [@Sakamoto2015]
 
 To minify JavaScript, HTML and CSS files from R, you can use the `{minifyr}` [@R-minifyr] package, that wraps the `node-minify` NodeJS library. 
 For example, compare the size of this file from `{shiny}`:
