--- a/15-common-app-caveats.Rmd
+++ b/15-common-app-caveats.Rmd
@@ -193,7 +193,8 @@ server <- function(input, output, session){
     # Every time this reactive context is invalidated, 
     # we add 1 to the i value
     i <<- i + 1
-    # We print the i value to the console, and the value of input$txt
+    # We print the i value to the console, 
+    # and the value of input$txt
     cat_rule(as.character(i))
     print(input$txt)
   })
@@ -691,7 +692,8 @@ Here are three strategies to code without `uiOutput()` & `renderUI()`.
 
 #### A. Implement UI events in JavaScript {-}
 
-> Mixing languages is better than writing everything in one, if and only if using only that one is likely to overcomplicate the program. $`r right_link("Applying the Unix Philosophy - The Art of Unix Programming", "http://www.catb.org/~esr/writings/taoup/html/ch01s08.html")`$
+> Mixing languages is better than writing everything in one, if and only if using only that one is likely to overcomplicate the program. $
+> `r right_link("Applying the Unix Philosophy - The Art of Unix Programming", "http://www.catb.org/~esr/writings/taoup/html/ch01s08.html")`
 
 We will see in the last chapter of this book how you can integrate JS inside your `{shiny}` app, and how even basic functions can be useful for making your app server lighter. 
 For example, compare: 
