--- a/19-appendix.Rmd
+++ b/19-appendix.Rmd
@@ -1,6 +1,6 @@
 # (PART)  Appendix {-}
 
-# Use case - Building an App, from Start to Finish {#usecase} {-}
+# Use case - Building an App, from Start to Finish {-}
 
 This chapter aims at exemplifying the workflow developed in this book using a "real life" example. 
 In this appendix, we will be building a `{shiny}` application from start to finish. 
@@ -134,7 +134,7 @@ He studied web development at the university, where he learned about minificatio
 He is now also in charge of training new recruits for the company he works at, and also gives some lecture to the university he went to. 
 Most of the minification he does is automated, but he is looking for a tool he can use during trainings and classes to explain how minification works.
 
-This step is available at [github.com/ColinFay/minifying/step-1-design](https://github.com/ColinFay/minifying/tree/master/step-1-design).
+This step is available at [github.com/ColinFay, folder minifying/step-1-design](https://github.com/ColinFay/minifying/tree/master/step-1-design).
 
 ## Step 2: Prototyping {-}
 
@@ -189,7 +189,13 @@ guess_minifier <- function(file){
     # it will be used to update the selectInput that 
     # is used to select an algo
     pattern = patt, 
-    functions = grep(patt, names(loadNamespace("minifyr")), value = TRUE)
+    functions = grep(
+      patt, 
+      names(
+        loadNamespace("minifyr")
+      ), 
+      value = TRUE
+    )
   )
   
 }
@@ -207,7 +213,7 @@ guess_minifier(
 )[2:4]
 guess_minifier(
   minifyr_example("json")
-)
+)[2:4]
 # Try with a non valid extension
 guess_minifier(
   "path/to/text.docx"
@@ -323,7 +329,7 @@ There are not that much text displayed on the screen, so this font should work w
 We then used CSS to arrange our page: size, padding, alignment, colors...
 If you want to know more about this file, it's located in the `inst/app/www` folder of the package.
 
-This step is available at [github.com/ColinFay/minifying/step-2-prototype](https://github.com/ColinFay/minifying/tree/master/step-2-prototype).
+This step is available at [github.com/ColinFay/minifying, folder step-2-prototype](https://github.com/ColinFay/minifying/tree/master/step-2-prototype).
 
 
 ## Step 3: Build {-}
@@ -345,7 +351,7 @@ Here is the logic we will be adding to the application:
 During this process, we will migrate the functions from the Rmd to their own files, use external dependencies, and document our business logic functions. 
 You can refer to the `dev/02_dev.R` file if you want to read the exact steps taken here.
 
-This step is available at [github.com/ColinFay/minifying/step-3-build](https://github.com/ColinFay/minifying/tree/master/step-3-build).
+This step is available at [github.com/ColinFay/minifying, folder step-3-build](https://github.com/ColinFay/minifying/tree/master/step-3-build).
 
 ## Step 4: Strengthen {-}
 
@@ -416,7 +422,7 @@ And on top of that, running these inside you CI might cause some pain, and of co
 
 We'll also be building "standard" function checks, which you can find in the `test/` folder.
 
-This step is available at [github.com/ColinFay/minifying/step-4-strengthen](https://github.com/ColinFay/minifying/tree/master/step-4-strengthen).
+This step is available at [github.com/ColinFay/minifying, folder  step-4-strengthen](https://github.com/ColinFay/minifying/tree/master/step-4-strengthen).
 
 ## Step 5: Deploy {-}
 
@@ -492,4 +498,4 @@ We can try it with:
 docker run -p 2811:80 minifying
 ```
 
-This step is available at [github.com/ColinFay/minifying/step-5-deploy](https://github.com/ColinFay/minifying/tree/master/step-5-deploy).
+This step is available at [github.com/ColinFay/minifying, folder step-5-deploy](https://github.com/ColinFay/minifying/tree/master/step-5-deploy).
