--- a/01-big-shiny.Rmd
+++ b/01-big-shiny.Rmd
@@ -27,7 +27,7 @@ Ready to start engineering production-grade `{shiny}` apps?
 
 ## What is a Complex `{shiny}` Application? {#complex-shiny}
 
-> One of the unfortunate things about reality is that it often poses complex problems that demand complex solutions 
+> One of the unfortunate things about reality is that it often poses complex problems that demand complex solutions.  
 > `r right_link("The Art of Unix Programming", "http://www.catb.org/~esr/writings/taoup/html/ch13s01.html")`
 
 ### Reaching the cliff of complexity
