--- a/10-step-by-step-build.Rmd
+++ b/10-step-by-step-build.Rmd
@@ -73,7 +73,8 @@ This will add another field to the `DESCRIPTION` file, `Remotes`, with the locat
 
 All of this can seem a little bit daunting at first, but that is for the best: 
 
-> Having a high quality namespace helps encapsulate your package and makes it self-contained. This ensures that other packages won’t interfere with your code, that your code won’t interfere with other packages, and that your package works regardless of the environment in which it’s run. _R Packages_, [@rpkg]
+> Having a high quality namespace helps encapsulate your package and makes it self-contained. This ensures that other packages won’t interfere with your code, that your code won’t interfere with other packages, and that your package works regardless of the environment in which it’s run.   
+> [@rpkg]
 
 To learn more about the details of dependencies, `DESCRIPTION` and `NAMESPACE`, here are some resources: 
 
