--- a/15-common-app-caveats.Rmd
+++ b/15-common-app-caveats.Rmd
@@ -692,7 +692,7 @@ Here are three strategies to code without `uiOutput()` & `renderUI()`.
 
 #### A. Implement UI events in JavaScript {-}
 
-> Mixing languages is better than writing everything in one, if and only if using only that one is likely to overcomplicate the program. $
+> Mixing languages is better than writing everything in one, if and only if using only that one is likely to overcomplicate the program.  
 > `r right_link("Applying the Unix Philosophy - The Art of Unix Programming", "http://www.catb.org/~esr/writings/taoup/html/ch01s08.html")`
 
 We will see in the last chapter of this book how you can integrate JS inside your `{shiny}` app, and how even basic functions can be useful for making your app server lighter. 
