--- a/17-javascript.Rmd
+++ b/17-javascript.Rmd
@@ -67,8 +67,8 @@ In this chapter, we will first review some JavaScript basics which can be used "
 Then, we will talk about making R & JS communicate with each other, and explore some common patterns for JavaScript in `{shiny}`. 
 Finally, we will quickly present some of the functions available in `{golem}` [@R-golem] that can be used to launch JavaScript.
 
-> Note that this chapter does not try to be a comprehensive JavaScript course. 
-External resources are linked all throughout this chapter and at the end if you want to dive deeper into JavaScript.
+_Note that this chapter does not try to be a comprehensive JavaScript course. 
+External resources are linked all throughout this chapter and at the end if you want to dive deeper into JavaScript._
 
 ## A quick introduction to JavaScript
 
@@ -227,7 +227,7 @@ That's `jQuery`, and we will discover it in the very next section!
 
 The `jQuery` framework is natively included in `{shiny}`.
 
-> jQuery is a fast, small, and feature-rich JavaScript library. It makes things like HTML document traversal and manipulation, event handling, animation, and Ajax much simpler with an easy-to-use API that works across a multitude of browsers. 
+> jQuery is a fast, small, and feature-rich JavaScript library. It makes things like HTML document traversal and manipulation, event handling, animation, and Ajax much simpler with an easy-to-use API that works across a multitude of browsers.  
 > `r right_link("jQuery home page", "https://jquery.com/")`
 
 `jQuery` is a very popular JavaScript library which is designed to manipulate the DOM, its events, and its elements. 
