--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -151,7 +151,7 @@ Small is beautiful.
 Being able to properly cut a codebase into small modules will help developers build a mental model of the application (Remember ["What is a complex `{shiny}` Application?"](#complex-shiny)).
 But what are `{shiny}` modules?
 
-> `{shiny}` modules address the namespacing problem in `{shiny}` UI and server logic, adding a level of abstraction beyond functions 
+> `{shiny}` modules address the namespacing problem in `{shiny}` UI and server logic, adding a level of abstraction beyond functions.  
 > `r right_link("Modularizing Shiny app code", "https://shiny.rstudio.com/articles/modules.html")`
 
 Let us first untangle this quote with an example about the `{shiny}` namespace problem. 
@@ -920,7 +920,8 @@ As developed in "Refactoring at Scale" [@lemaire2020], lacking a defined file st
 And of course, on the long run, even developers with a knowledge of the structure can get lost, even more if getting back to a project that they have not 
 
 > Because it’s easier to maintain the status quo, instead of proactively beginning to organize related files [...], engineers instead learn to navigate the increasingly sprawling code. New engineers introduced to the growing chaos raise a warning flag and encourage the team to begin splitting up the code, but these concerns fall to deaf ears [...]. 
-Eventually, the codebase reaches a critical mass where the persistent lack of organization has dramatically slowed productivity across the engineering team. Only then does the team take the time to draft a plan for grooming the codebase, at which point the number of variables to consider is far greater than had they made a concerted effort to tackle the problem months (or even years) earlier.
+Eventually, the codebase reaches a critical mass where the persistent lack of organization has dramatically slowed productivity across the engineering team. Only then does the team take the time to draft a plan for grooming the codebase, at which point the number of variables to consider is far greater than had they made a concerted effort to tackle the problem months (or even years) earlier.  
+> [@lemaire2020]
 
 Using a convention allows everyone to know where to look when debugging, refactoring, or implementing new features. 
 For example, if you follow `{golem}`'s convention (which is the one developed in this section), you will know immediately that a file starting with `mod_` contains a module. 
