--- a/07-step-by-step-design.Rmd
+++ b/07-step-by-step-design.Rmd
@@ -2,7 +2,7 @@
 
 ## Designing before coding
 
-> You have to believe that software design is a craft worth all the intelligence, creativity, and passion you can muster. Otherwise you will not look past the easy, stereotyped ways of approaching design and implementation; __you will rush into coding when you should be thinking__. You'll carelessly complicate when you should be relentlessly simplifying — and you will wonder why your code bloats and debugging is so hard. 
+> You have to believe that software design is a craft worth all the intelligence, creativity, and passion you can muster. Otherwise you will not look past the easy, stereotyped ways of approaching design and implementation; __you will rush into coding when you should be thinking__. You'll carelessly complicate when you should be relentlessly simplifying — and you will wonder why your code bloats and debugging is so hard.  
 > `r right_link("The Art of Unix Programming - Attitude Matters Too", "http://www.catb.org/~esr/writings/taoup/html/ch01s09.html")`
 
 ### The Urge to Code 
@@ -126,13 +126,15 @@ On top of that, remember all these things we have seen in the last chapter about
 Personas is a concept borrowed from design and marketing that refers to fictional characters that will serve as a user type. 
 In other words, a persona is a character that represents the "typical" behavior and traits for a group of users that will interact with your product. 
 
-> A persona consists of a description of a fictional person who represents an important customer or user group for the product, and typically presents information about demographics, behavior, product usage, and product-related goals, tasks, attitudes, etc. [@Chapman2008]
+> A persona consists of a description of a fictional person who represents an important customer or user group for the product, and typically presents information about demographics, behavior, product usage, and product-related goals, tasks, attitudes, etc.  
+> [@Chapman2008]
 
 Using personas during the design process helps you center your focus on the end user, so that you know who you are creating the application for.
 Then, while building your application, you can think about how each persona will interact with a given feature: will they use it? Will they understand it? Do we need to add extra information? Will they find this useful? etc. 
 Asking these kind of questions helps taking a step back from feature implementation and re-focus on what matters: we are building application for someone else, who will eventually use it. 
 
-> "The benefits of personas are that they enable designers to envision the end-user’s needs and wants, remind designers that their own needs are not necessarily the end-users' needs, and provide an effective communication tool, which facilitates better design decisions_." [@Billestrup2014]
+> "The benefits of personas are that they enable designers to envision the end-user’s needs and wants, remind designers that their own needs are not necessarily the end-users' needs, and provide an effective communication tool, which facilitates better design decisions."  
+> [@Billestrup2014]
 
 The building of these personas is made easier once you have interacted with the end users, as we suggested in the previous section. 
 Given the answers to these questions, you will be able to draw some common characteristics about the future users of your application. 
@@ -146,7 +148,7 @@ From time to time, you are building a `{shiny}` app on top of an existing code-b
 These kind of projects are often referred to as "brownfield projects", in opposition to "greenfield projects", borrowing the terminology from urban planning: a greenfield project being one where you are building on "evergreen" lands, while a brownfield project is building on lands that were, for example, industrial lands, and which will need to be sanitized, as they potentially contain waste or pollution, constructions need to be destroyed, roads needs to be deviated, and all these things that can make the urban planning process more complex. 
 Then, you can extend this to software engineering, where a greenfield project is the one that start from scratch, and a brownfield project is a one where you need to build on top of an existing code-base, implying that you will need to do some extra work before actually working on the project: 
 
-> "When transforming brownfield projects, we may face significant impediments and problems, especially when no automated testing exists, or when there is a tightly-coupled architecture that prevents small teams from developing, testing, and deploying code independently." 
+> "When transforming brownfield projects, we may face significant impediments and problems, especially when no automated testing exists, or when there is a tightly-coupled architecture that prevents small teams from developing, testing, and deploying code independently."  
 >`r right_link("The DevOps Handbook", "https://itrevolution.com/book/the-devops-handbook/")`
 
 Depending on how you chose to handle it, starting from a code base that is already written can either be very much helping, or you can be shooting yourself in the foot. 
