--- a/09-prototyping.Rmd
+++ b/09-prototyping.Rmd
@@ -4,7 +4,7 @@
 
 ### Prototype, then polish
 
-> Prototyping first may help keep you from investing far too much time for marginal gains. 
+> Prototyping first may help keep you from investing far too much time for marginal gains.  
 > `r right_link("The Art of Unix Programming", "http://www.catb.org/~esr/writings/taoup/html/ch01s06.html\\#rule_of_optimization")`
 
 And yet another Rule from the Art of Unix Programming: "Rule of Optimization: Prototype before polishing. __Get it working before you optimize it__."
@@ -15,7 +15,8 @@ Getting things to work before trying to optimize the app is always a good approa
 For example if you are building a vehicle, it feels more of a success to start with a skateboard than with a wheel: you quickly have a product that can be used to move, not waiting for the end of the project before finally having something useful.
 Building a skateboard helps the developer maintaining a sense of accomplishment throughout the life of the project: the quicker you can have a running program the better.
 
-> "_One of the really nice things about running your programm frequently is that you get to see it running, which is fun, ans that's what programming is all about_", The Unicorn Projet, [@genekim2019]
+> "One of the really nice things about running your programm frequently is that you get to see it running, which is fun, ans that's what programming is all about"  
+> [@genekim2019]
 
 
 (ref:mvp) Building a Minimum Viable Product
@@ -31,7 +32,7 @@ But while these kind of abstractions are elegant and optimized, they can make th
 So before focusing on turning something into a function, make it work first. 
 As said in _R for Data Science_ [@hadleywickham2017] about abstraction with `{purrr}` [@R-purrr]: 
 
-> Once you master these functions, you’ll find it takes much less time to solve iteration problems. But you should never feel bad about using a for loop instead of a map function. The map functions are a step up a tower of abstraction, and it can take a long time to get your head around how they work. The important thing is that you solve the problem that you’re working on, not write the most concise and elegant code (although that’s definitely something you want to strive towards!). 
+> Once you master these functions, you’ll find it takes much less time to solve iteration problems. But you should never feel bad about using a for loop instead of a map function. The map functions are a step up a tower of abstraction, and it can take a long time to get your head around how they work. The important thing is that you solve the problem that you’re working on, not write the most concise and elegant code (although that’s definitely something you want to strive towards!).  
 > `r right_link("R for Data Science - 21.5 The map functions", "https://r4ds.had.co.nz/iteration.html")` 
 
 As a small example, we can refer to the binding module from `{hexmake}` [@R-hexmake]: this module manipulates namespaces, inputs and `session` to automatically bind inputs to the R6 object containing the image (see implementation [here](https://github.com/ColinFay/hexmake/blob/master/R/mod_binder.R#L29), [here](https://github.com/ColinFay/hexmake/blob/master/R/utils_server.R#L2) and [here](https://github.com/ColinFay/hexmake/blob/master/R/mod_left.R#L60)). 
