--- a/11-step-by-step-secure.Rmd
+++ b/11-step-by-step-secure.Rmd
@@ -662,7 +662,7 @@ test$wait_for_shiny_ready()
 
 
 
-```{r 11-step-by-step-secure-2-bis, eval = TRUE, include=FALSE}
+```{r 11-step-by-step-secure-2-bis, eval = FALSE, include=FALSE}
 # We are creating a first data.frame that records the launch 
 # of the container.
 results <- dockerstats::dockerstats("xmk2", extra = "launch")
