--- a/11-step-by-step-secure.Rmd
+++ b/11-step-by-step-secure.Rmd
@@ -743,11 +743,14 @@ Shiny is computing
 ```
 
 ```{r 11-step-by-step-secure-4-bis, eval = TRUE, cache=TRUE}
-# Stopping the docker container
-system("docker kill xmk2")
+try({
+  # Stopping the docker container
+  system("docker kill xmk2")
+  
+  # Stopping the tests
+  test$stop()
+})
 
-# Stopping the tests
-test$stop()
 ```
 
 And draw a small graph of this evolution: 
