--- a/11-step-by-step-secure.Rmd
+++ b/11-step-by-step-secure.Rmd
@@ -908,7 +908,7 @@ Bitbucket, and even local repositories.
 The `renv/` folder contains a series of files that store your settings and the necessary packages, using a structure that mimics a local repository.
 
 ```{r 11-step-by-step-secure-41 }
-# Displaying the strucuture of the folder
+# Displaying the structure of the folder
 fs::dir_tree("data-raw/renvinit/", recurse = 5)
 ```
 
